@startuml
abstract class Employee {
    +get_salary()
    +show_structure(indent)
}

class IndividualContributor {
    -name
    -salary
    +get_salary()
    +show_structure()
}

class Manager {
    -name
    -salary
    -subordinates
    +add(emp)
    +get_salary()
    +show_structure()
}

Employee <|-- IndividualContributor
Employee <|-- Manager
Manager "1" *-- "*" Employee

@enduml
